--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^8.6.8",
     "firebase-admin": "^9.9.0",
     "micro": "^9.3.4",
+    "moment": "^2.29.1",
     "next": "latest",
     "next-auth": "^3.27.0",
     "react": "17.0.1",
